Install Webpack, Bootstrap

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>RSS aggregator</title>
 </head>
 <body>
-    
+        <div class="container py-4 px-3 mx-auto">
+          <h1>Hello, Bootstrap and Webpack!</h1>
+          <button class="btn btn-primary">Primary button</button>
+        </div>
+        <script src="/src/index.js"></script>
+
 </body>
 </html>
