fix double posts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
           </div>
           <h1 class="display-3 mb-0">RSS агрегатор</h1>
-          <p class="lead">Начните читать RSS сегодня! Это легкоб это красиво.</p>
+          <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
           <form action class="rss-form text-body">
             <div class="row">
               <div class="col">
