fix changeLanguage functionality

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-white">
           <div class="row justify-content-end">
-            <div class="btn-group col-md-3 p-0 bg-white" role="group">
-              <button type="button" class="btn btn-success">Русский</button>
-              <button type="button" class="btn btn-outline-success text-dark">English</button>
+            <div id="langButtons" class="btn-group col-md-3 p-0 bg-white" role="group">
+              <button id="ru" type="button" class="btn btn-success">Русский</button>
+              <button id="en" type="button" class="btn btn-outline-success text-dark">English</button>
             </div>
           </div>
           <h1 class="display-3 mb-0">RSS агрегатор</h1>
